--- a/app/css/additional-styles/toggle-switch.css
+++ b/app/css/additional-styles/toggle-switch.css
@@ -19,7 +19,7 @@
 }
 
 .form-switch input[type="checkbox"]:checked+label {
-    @apply bg-purple-600;
+    @apply bg-zinc-800;
 }
 
 .form-switch input[type="checkbox"]:checked+label>span:first-child {
